--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "python.analysis.autoImportCompletions": false
+  "python.analysis.autoImportCompletions": false,
+  "files.associations": {
+    "*.pl": "prolog",
+    "*.tc": "c"
+  }
 }
